# magic-school

./: .gitignore  CMakeLists.txt
include/: Animation.hpp  Button.hpp  Game.hpp  Listenable.hpp  PathLoader.hpp  TransformAnimation.hpp  Util.hpp
include/scenes/: MainMenu.hpp  Play.hpp  Scene.hpp
include/states/: State.hpp  StateMachine.hpp
src/: Animation.cpp  Button.cpp  Game.cpp  Listenable.cpp  PathLoader.cpp  TransformAnimation.cpp  main.cpp
src/scenes/: MainMenu.cpp  Play.cpp
src/states/: gameStates.cpp
src/tests/: AnimationTest.cpp  ButtonTest.cpp  PathLoaderTest.cpp  SceneTest.cpp
